<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- rev 3 -->
    <string name="hello">Welcome to MyWallet!</string>
    <string name="lessopenining">Opening balance is less than the available amount</string>
    <string name="app_name">MyWallet</string>
    <string name="OptionMenu">Options</string>
    <string name="menu_add_account">Add new account</string>
    <string name="manage_accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="add_Currency">Add Currency</string>
    <string name="Category">Categories</string>
    <string name="reports">Reports</string>
    <string name="setting">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enbaleLogin">Prompt for login at startup</string>
    <string name="login">Login</string>
    <string name="newLogin">Create A New Login</string>
    <string name="cancel">Cancel</string>
    <string name="loginFailed">Login fail! User Name or Password is incorrect!</string>
    <string name="retriesleft">number of tries left:</string>
    <string name="search">Search</string>
    <string name="currencyConv">Currency Converter</string>
    <string name="enbaleAlerts">Enable Alerts</string>
    <string name="add">Add</string>
    <string name="name">name</string>
    <string name="opBalance">Opening Balance</string>
    <string name="minBalance">Minimum Balance</string>
    <string name="opDate">Open Date</string>
    <string name="accName">Account Name</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="saveChanges">Save Changes</string>
    <string name="result">Result</string>
    <string name="rate">Rate</string>
    <string name="currencyname">Currency Name</string>
    <string name="serverURL">Automatic update server URL</string>
    <string name="kk">ދިވެހި</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="payee">Payee</string>
    <string name="payees">Payees</string>
    <string name="payeeName">Payee Name</string>
    <string name="email">email</string>
    <string name="contactNo">Contact Number</string>
    <string name="deleteConfirmation">Are you sure, you want to delete this account?</string>
    <string name="symbol">Currency Symbol</string>
    <string name="currencylist">Currency List</string>
    <string name="transferto">Transfer to:</string>
    <string name="add_payee">Add Payee</string>
    <string name="add_category">Add Category</string>

    <string-array name="accType">
        <item>Saving</item>
        <item>Credit card</item>
        <item>Asset</item>
        <item>Cash</item>
        <item>other</item>
    </string-array>
    
    <string-array name="status">
        <item>Reconciled</item>
        <item>Unreconciled</item>
        <item>Cleared</item>
    </string-array>
    
   <string-array name="type">
       <item >Income</item>
       <item >Expense</item>
       <item >Transfer</item>
   </string-array>
    
    <string-array name="currencyType">
        <item>USD</item>
        <item>MRF</item>
    </string-array>

</resources>